--- a/app/src/main/res/values-vi/strings.xml
+++ b/app/src/main/res/values-vi/strings.xml
@@ -149,4 +149,5 @@
     <string name="language_changed">Đã thay đổi ngôn ngữ thành công!</string>
     <string name="confirm">Xác nhận</string>
     <string name="select_language">Chọn ngôn ngữ</string>
+    <string name="language_cancel">Đã hủy chọn ngôn ngữ</string>
 </resources> 
